// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App displays empty state when there is no content 1`] = `
<div
  class="taskboard-app"
>
  <no-content-empty-state-stub />
</div>
`;

exports[`App displays global error state when there is an error 1`] = `
<div
  class="taskboard-app"
>
  <global-app-error-stub />
</div>
`;

exports[`App displays misconfiguration error even if there are no content 1`] = `
<div
  class="taskboard-app"
>
  <board-without-any-columns-error-stub />
</div>
`;

exports[`App displays misconfiguration error when there are no column 1`] = `
<div
  class="taskboard-app"
>
  <board-without-any-columns-error-stub />
</div>
`;

exports[`App displays the board when there are columns 1`] = `
<div
  class="taskboard-app"
>
  <task-board-stub />
</div>
`;
